<resources>
    <string name="app_name">barboza-CountBook</string>
    <string name="action_settings">Settings</string>
    <string name="input_name">Name of counter</string>
    <string name="input_value">Initial value</string>
    <string name="current_value">Current value</string>
    <string name="input_comment">Comment (Optional)</string>
    <string name="add_new_counter">Add New Counter</string>
    <string name="edit_counter">Edit Counter</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    <string name="reset">RESET</string>
    <string name="cancel">CANCEL</string>
    <string name="total_counters">Total Counters:</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="name_required">Counter name is required</string>
    <string name="value_required">value is required</string>
    <string name="is_num">"value must be a number"</string>
    <string name="is_positive">value must be positive</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="add_toast">New counter added</string>
    <string name="edit_toast">Counter updated</string>
    <string name="delete_toast">Counter deleted</string>
    <string name="reset_toast">Counter reset</string>
    <string name="last_updated">Last updated</string>
    <string name="up">+</string>
    <string name="down">-</string>
    <string name="negative_value">Count can only be non-negative</string>
</resources>
