<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/dialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="TextView"
        android:textSize="20sp"
        android:textColor="@color/colorValueBg"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/dialogComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="TextView"
        android:textSize="14sp"
        android:layout_marginTop="-5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <Button
            android:id="@+id/decrement"
            android:layout_width="0dip"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:text="@string/down"
            android:background="@color/colorGray"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/dialogValue"
            android:layout_width="0dip"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="TextView"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/increment"
            android:layout_width="0dip"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:text="@string/up"
            android:background="@color/colorGray"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/done"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>
